Fixed spacing

--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -21,17 +21,22 @@
 }
 
 .row>div {
-    flex: 1;
+    width: 100%;
 }
 
 .main {
-    margin-left: 15%;
-    margin-right:15%
+    margin-left: 10%;
+    margin-right: 10%
 }
 
 html,
 body {
     height: 100%;
+}
+.new-listing {
+    padding-left: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 .cont-ms {
@@ -41,24 +46,21 @@ body {
 }
 
 .cont-left {
-    padding-left: 2%;
-    padding-top: 2%;
-    padding-right: 35%;
-    padding-bottom: 2%;
-    justify-content: center;
-    margin-right: -55%;
-
-}
-
-.col-rights {}
-
-.cont-right {
+    float: left;
+    width: 40%;
     padding-left: 5%;
     padding-top: 2%;
-    padding-right: 0%;
     padding-bottom: 2%;
+}
+
+.cont-right {
     border-left: 1px solid grey;
-    justify-content-center;
+    float: right;
+    width: 60%;
+    padding-left: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+
 }
 
 .cont-bottom {
